--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <section class="hero">
       <div class="hero-content">
         <p class="kicker">Frontend Developer</p>
-        <h1>Build clean, responsive websites with HTML, CSS & JavaScript.</h1>
+        <h1>Designing and Developing a Responsive Web Application</h1>
         <p class="lead">
           Welcome to AbCd Dev Hub Studio. I create simple, fast websites and interactive UI features.
         </p>
@@ -160,3 +160,4 @@
   <script src="assets/js/main.js" defer></script>
 </body>
 </html>
+
